Update Outline Project Spec

--- a/doc/outlinespec/mmp.bib
+++ b/doc/outlinespec/mmp.bib
@@ -1,20 +1,16 @@
 
 % This is an example of a string: this is the way you do variables in BiBTex
-% @string{variable_name="string the variable_name refers to"}
-%@string{aij= "Artificial Intelligence"}
 
 @MISC{TravisCI,
-author = {},
-title = {{Travis CI}},
+title = {{Travis CI: Building a PHP project}},
 month = Feb,
 year = {2015},
-howpublished={\url{https://travis-ci.org}},
+howpublished={\url{http://docs.travis-ci.com/user/languages/php/}},
 note={Accessed Feb 2015},
 annote={Travis CI is a hosted continous integration system that connects to GitHub to help with automated unit testing and vulnerability scanning.}
 }
 
 @MISC{Twig,
-author = {},
 title = {{Twig - The flexible, fast, and secure template engine for PHP}},
 month = Feb,
 year = {2015},
@@ -29,6 +25,15 @@ title = {{Understanding MVC in PHP}},
 month = Feb,
 year = {2015},
 howpublished={\url{http://archive.oreilly.com/pub/a/php/archive/mvc-intro.html}},
+annote={}
+}
+
+@MISC{PHPMVC2,
+author = {Callum Hopkins},
+title = {{PHP Master | The MVC Pattern and PHP}},
+month = Feb,
+year = {2015},
+howpublished={\url{http://www.sitepoint.com/the-mvc-pattern-and-php-1}},
 annote={}
 }
 
@@ -50,7 +55,7 @@ annote={}
     year = {1993}
 }
 
-@incollection{citeulike:2348356,
+incollection{citeulike:2348356,
     abstract = {{Students' evaluations of teaching effectiveness (SETs) have been the topic of considerable interest and a great deal of research in North America and, increasingly, universities all over the world. Research reviewed here indicated that SETs are:}},
     author = {Marsh, HerbertW},
     booktitle = {The Scholarship of Teaching and Learning in Higher Education: An Evidence-Based Perspective},
@@ -70,7 +75,7 @@ annote={}
     year = {2007}
 }
 
-@article{citeulike:11837547,
+article{citeulike:11837547,
     author = {Marsh, Herbert W.},
     citeulike-article-id = {11837547},
     citeulike-linkout-0 = {http://dx.doi.org/10.1016/0883-0355(87)90001-2},
@@ -111,7 +116,7 @@ annote={}
     year = {1998}
 }
 
-@article{citeulike:13507579,
+article{citeulike:13507579,
     abstract = {{An investigation was conducted into 3- or 4-year departmental sets of student feedback questionnaire data from one university. Only four out of 25 departments had significant changes to any of the six dimensions in the 3- or 4-year period, and three of these significant changes were falls. There is, therefore, no evidence that the use of the questionnaire was making any contribution to improving the overall quality of teaching and learning of the departments, at least as perceived by the students. If it was, there should have been evidence of rising values. The following reasons why the use of the questionnaire might not have been conducive to improving teaching quality are discussed. The possibility that teaching quality is inherently stable is rejected. It is possible that feedback from the questionnaire was not used effectively. Related to this is whether instructors perceived that the university rewarded good teaching, so felt there was an incentive to make use of the feedback. The emphasis of the system was on appraisal, which might negate any developmental effect. The standard questionnaire and the associated procedures may have lacked flexibility and been inappropriate for innovative forms of teaching. The study questions whether student feedback questionnaires are utilising resources effectively if they are administered in an environment similar to the university in question, which appears reasonably typical.}},
     author = {Kember, David and Leung, Doris Y. P. and Kwan, K. P.},
     citeulike-article-id = {13507579},
@@ -133,7 +138,7 @@ annote={}
     year = {2002}
 }
 
-@article{citeulike:13507576,
+article{citeulike:13507576,
     abstract = {{This article applied meta-analytic methodology to integrate findings from 22 comparisons of the effectiveness of student-rating feedback at the college level. On the average, feedback had a modest but significant effect on improving instruction. Instructors receiving mid-semester feedback averaged. 16 of a rating point higher on end-of-semester overall ratings than did instructors receiving no mid-semester feedback. This corresponded to a gain of over one-third of a standard-deviation unit, or a percentile gain of 15 points. The effects of student-rating feedback were accentuated when augmentation or consultation accompanied the ratings. Other study features, such as the length of time available to implement changes and the use of normative data, did not produce different effect sizes.}},
     author = {Cohen, PeterA},
     booktitle = {Research in Higher Education},
@@ -153,7 +158,7 @@ annote={}
     year = {1980}
 }
 
-@article{citeulike:13507564,
+article{citeulike:13507564,
     abstract = {{This review deals with the use of student ratings as feedback to teachers. Evidence suggests that differences in the source and nature of the feedback and in the attributes of feedback recipients partly explain the differential effect which feedback has on teachers. Issues associated with the research design of feedback studies are also surveyed. The review suggests the existence of a minimal effect at best of feedback on instructional improvement at the university level. Suggestions are offered for improving the nature of the feedback.}},
     author = {Rotem, Arie and Glasman, Naftaly S.},
     citeulike-article-id = {13507564},
