--- a/doc/outlinespec/beb12_OutlineProjectSpecification.tex
+++ b/doc/outlinespec/beb12_OutlineProjectSpecification.tex
@@ -81,17 +81,17 @@ After this, the design of the OOP MVC version of the software can begin as well 
 \subsection{Short Term Tasks}
 \begin{description}[itemsep=-0.25em,itemindent=-2em,leftmargin=4em]
 	\item[Change procedural design] -- Design a new software architecture using MVC with OOP.
-	\item[PHP Data Objects (PDO)] -- Change the current mysqli and tidy\_sql implementation to use PDO for greater security, flexibility and features when interacting with databases.
-	\item[Protect admin dashboard] -- Using LDAP HTTP authentication via .htaccess
-	\item[Unit Testing] -- Use Travis CI\cite{TravisCI} to do automated unit testing and vulnerability scanning
+	\item[Unit Testing] -- Use Travis CI\cite{TravisCI} to do automated unit testing and vulnerability scanning.
+	\item[Protect admin dashboard] -- Using LDAP HTTP authentication via \emph{.htaccess}.
+	\item[PHP Data Objects (PDO)] -- Change the current \emph{mysqli} and \emph{tidy\_sql} implementation to use PDO for greater security, flexibility and features when interacting with databases.
 \end{description}
 
 \subsection{Long Term Tasks}
 \begin{description}[itemsep=-0.25em,itemindent=-2em,leftmargin=4em]
-	\item[Analytics/Reports] -- Create a system which can narrow down responses to criteria (e.g. Find modules with a low satisfaction score which mention `feedback' in comments)
 	\item[Internationalisation (i18n)] -- Reimplement i18n system to support additional languages.
 	\item[Accessibility (a11y)] -- Ensure all student-facing pages are accessible for disabled users.
 	\item[Relational Database] -- Modify the database schema to be object oriented and relational.
+	\item[Analytics/Reports] -- Create a system which can narrow down responses to criteria (e.g. Find modules with a low satisfaction score which mention `feedback' in comments)
 \end{description}
 
 
@@ -113,8 +113,18 @@ After this, the design of the OOP MVC version of the software can begin as well 
 %  - Explain these items and highlight when they will be produced
 %  - Take into account your progress
 
+% TODO: Testing Dates
 \begin{description}[itemindent=-2em,leftmargin=4em]
-	\item[] -- 
+	\item[TODO: Temperature Test] -- 2015-03 -- Internal/closed functional testing.
+	\item[TODO: Temperature Questionnaire] -- 2015-03 -- Questionnaire sent out to two departments.
+	\item[--]
+	\item[Outline Project Specification] -- 2015-02-06 -- This document.
+	\item[OOP MVC Class Diagram] -- 2015-02-09 -- UML Class diagram to describe MVC design.
+	\item[OOP MVC Release] -- 2015-02-20 -- Functional OOP MVC version of the software.
+	\item[i18n and a11y] -- 2015-02-24 -- Add internationalisation and accessibility support.
+	\item[Mid-Project Demonstration] -- 2015-03-09 -- Start date of Mid-Project Demonstrations.
+	\item[Final Report] -- 2015-05-07 -- Final report hand-in.
+	\item[Final Demonstrations] -- 2015-05-11 -- Final project demonstrations.
 \end{description}
 
 %==============================================================================
