--- a/doc/outlinespec/mmp.bib
+++ b/doc/outlinespec/mmp.bib
@@ -7,7 +7,7 @@ month = Feb,
 year = {2015},
 howpublished={\url{http://docs.travis-ci.com/user/languages/php/}},
 note={Accessed Feb 2015},
-annote={Travis CI is a hosted continous integration system that connects to GitHub to help with automated unit testing and vulnerability scanning.}
+annote={Travis CI is a hosted continous integration system that connects to GitHub to help with automated unit testing and vulnerability scanning. I will be using this to provide automated unit testing and vulnerability scanning.}
 }
 
 @MISC{Twig,
@@ -16,7 +16,7 @@ month = Feb,
 year = {2015},
 howpublished={\url{http://twig.sensiolabs.org}},
 note={Accessed Feb 2015},
-annote={Twig is the templating engine using by Keiron}
+annote={Twig is the templating engine used in the prototype by the previous author.}
 }
 
 @MISC{PHPMVC,
@@ -25,7 +25,7 @@ title = {{Understanding MVC in PHP}},
 month = Feb,
 year = {2015},
 howpublished={\url{http://archive.oreilly.com/pub/a/php/archive/mvc-intro.html}},
-annote={}
+annote={A series of articles on how to write MVC architecture in PHP which have been used as background reading ready for the OOP MVC design.}
 }
 
 @MISC{PHPMVC2,
@@ -34,7 +34,7 @@ title = {{PHP Master | The MVC Pattern and PHP}},
 month = Feb,
 year = {2015},
 howpublished={\url{http://www.sitepoint.com/the-mvc-pattern-and-php-1}},
-annote={}
+annote={Another set of articles on OOP MVC in PHP which have been read in preparation for the refactor.}
 }
 
 @article{1993,
@@ -52,7 +52,8 @@ annote={}
     title = {{The Practice of Giving Feedback to Improve Teaching: What Is Effective?}},
     url = {http://www.jstor.org/stable/2959994},
     volume = {64},
-    year = {1993}
+    year = {1993},
+    annote = {An article describing effective practices in gathering feedback in an academic environment. This is general background reading to get a greater understanding of the project's aims and goals.}
 }
 
 incollection{citeulike:2348356,
@@ -113,7 +114,8 @@ article{citeulike:11837547,
     title = {{Student Evaluation of College Teaching Effectiveness: a brief review}},
     url = {http://dx.doi.org/10.1080/0260293980230207},
     volume = {23},
-    year = {1998}
+    year = {1998},
+    annote = {An article describing effective practices in gathering feedback in an academic environment. This is general background reading to get a greater understanding of the project's aims and goals.}
 }
 
 article{citeulike:13507579,
